config db using postgres and new entity member

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "noFallthroughCasesInSwitch": false,
     "paths": {
       "@config": ["src/config"],
+      "@common/*": ["src/common/*"],
     }
   }
 }
