--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "my-rental-lib",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "My Rental Library App",
+  "author": "Boby Maulana Subagja",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -35,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
+    "nestjs-paginate": "^9.1.1",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
